<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView1"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="20sp"
        android:paddingRight="20sp" >

        <TextView
            android:id="@+id/pageUrl_label"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/url_label"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/pocheUrl"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textUri"
            android:linksClickable="false"
            android:maxLines="1"
            android:scrollHorizontally="false" >

            <requestFocus android:layout_width="wrap_content" />
        </EditText>

        <TextView
            android:id="@+id/txtTitre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/url_help" />

        <TextView
            android:id="@+id/txtContent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="" />

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:columnCount="2" >

            <Button
                android:id="@+id/btnDone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btnDone" />

            <Button
                android:id="@+id/btnGetPost"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_gravity="right|top"
                android:layout_row="0"
                android:text="@string/btnGetPost" />
        </GridLayout>

        <TextView
            android:id="@+id/txtContent2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="" />

        <TextView
            android:id="@+id/author"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/author"
            android:textSize="12sp" />
    </LinearLayout>

</ScrollView>